Minor alignment issues

--- a/core/public/stylesheets/landing.less
+++ b/core/public/stylesheets/landing.less
@@ -109,6 +109,7 @@
         .body {
           a { 
             color: #505050;
+            text-align: justify;          
           }
           span a { 
             color: @link-blue;
@@ -138,6 +139,5 @@
   footer { 
     border: none;
     margin-top: 1em;
-    margin-bottom: 128px;
   }
 }
